--- a/AutomationPractice/test-output/old/Default suite/methods.html
+++ b/AutomationPractice/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b6dfcb">  <td>22/01/16 20:43:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CreateAccountPage.browserLaunch()[pri:0, instance:object_repository.AddToCartPage@5b275dab]">&gt;&gt;browserLaunch</td> 
+<tr bgcolor="b6dfcb">  <td>22/01/18 18:27:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CreateAccountPage.browserLaunch()[pri:0, instance:object_repository.AddToCartPage@5b275dab]">&gt;&gt;browserLaunch</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@327177752</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>22/01/16 20:43:34</td>   <td>7675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CreateAccountPage.dataDriven()[pri:0, instance:object_repository.AddToCartPage@5b275dab]">&gt;&gt;dataDriven</td> 
+<tr bgcolor="b6dfcb">  <td>22/01/18 18:27:22</td>   <td>12197</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CreateAccountPage.dataDriven()[pri:0, instance:object_repository.AddToCartPage@5b275dab]">&gt;&gt;dataDriven</td> 
 <td>&nbsp;</td>  <td>main@327177752</td>   <td></td> </tr>
-<tr bgcolor="e6e9c3">  <td>22/01/16 20:43:34</td>   <td>7897</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.login()[pri:0, instance:object_repository.AddToCartPage@5b275dab]">login</td> 
+<tr bgcolor="b6dfcb">  <td>22/01/18 18:27:23</td>   <td>12443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateAccountPage.createAccount()[pri:0, instance:object_repository.AddToCartPage@5b275dab]">createAccount</td> 
   <td>main@327177752</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>22/01/16 20:43:37</td>   <td>10435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CreateAccountPage.dataDriven()[pri:0, instance:object_repository.AddToCartPage@5b275dab]">&gt;&gt;dataDriven</td> 
+<tr bgcolor="b6dfcb">  <td>22/01/18 18:27:31</td>   <td>21331</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CreateAccountPage.dataDriven()[pri:0, instance:object_repository.AddToCartPage@5b275dab]">&gt;&gt;dataDriven</td> 
 <td>&nbsp;</td>  <td>main@327177752</td>   <td></td> </tr>
-<tr bgcolor="96a48d">  <td>22/01/16 20:43:37</td>   <td>10535</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddToCartPage.AddToCartPage()[pri:0, instance:object_repository.AddToCartPage@5b275dab]">AddToCartPage</td> 
+<tr bgcolor="e6e9c3">  <td>22/01/18 18:27:32</td>   <td>21408</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.login()[pri:0, instance:object_repository.AddToCartPage@5b275dab]">login</td> 
   <td>main@327177752</td>   <td></td> </tr>
 </table>
